--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <!--Header-->
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-nav">
           <a class="header-logo link link-studio" lang="en" href="./index.html">
             <span class="color-log">Web</span>Studio</a
@@ -45,24 +45,26 @@
         </nav>
 
         <!--contacts sections -->
-        <div>
-          <a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <div class="contact-header">
+          <ul class="list header-dsaasd">
+            <li>
+              <a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li><a class="header-contact" href="tel:+380961111111">+380961111111</a></li>
+          </ul>
         </div>
-        <div>
-          <a class="header-contact" href="tel:+380961111111">+380961111111</a>
-        </div>
-        <!--section button-->
-        <section class="section-banner">
-          <h1 class="section-title">
-            Эффективные решения <br />
-            для вашего бизнеса
-          </h1>
-
-          <!--button-->
-          <button type="button" class="button">Заказать услугу</button>
-        </section>
       </div>
     </header>
+    <!--section button-->
+    <section class="section-banner">
+      <h1 class="section-title">
+        Эффективные решения <br />
+        для вашего бизнеса
+      </h1>
+
+      <!--button-->
+      <button type="button" class="button shadow-textbt">Заказать услугу</button>
+    </section>
 
     <!--section description-->
     <main>
@@ -106,10 +108,10 @@
       <section class="section-work">
         <div class="container">
           <h2 class="work-title">Чем мы занимаемся</h2>
-          <ul class="list">
+          <ul class="list img-flax no-dote">
             <li class="team-photo">
               <img src="./images/photo1.png" alt="Десктопные приложения" />
-            </li class="team-photo">
+            </li>
             <li>
               <img src="./images/photo2.png" alt="Мобильные приложения" />
             </li>
@@ -121,10 +123,11 @@
       </section>
 
       <!--section team-->
-      <div class="container">
-        <section>
+
+      <section class="team-section">
+        <div class="container">
           <h2 class="team-title">Наша команда</h2>
-          <ul class="list">
+          <ul class="list team-flex">
             <li>
               <img src="./images/team1.png" alt="Игорь Демьяненко" width="270" />
               <h3 class="team-name-title">Игорь Демьяненко</h3>
@@ -149,15 +152,15 @@
               <p class="team-description">UI Designer</p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <!--footer section-->
     <footer class="section-footer">
       <div class="container">
         <a class="link-footer" href="/index.html">Web<span class="color-footer">Studio</span></a>
         <div>
-          <address>
+          <address class="link-address">
             <ul class="list">
               <li>
                 <a
